assets/css/style.css
*{
  box-sizing: border-box;
}
html{
  scroll-behavior: smooth;
}

body{
  padding: 0;
  margin: 0;
  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
  font-size: 18px;
  line-height: 150%;
  max-width: 1366px;
  overflow-x: hidden;
  
}



h1,h2{
  font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';
}



h2{
  color:black;
  padding-bottom: 4px;
  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
             0px 8px 13px rgba(0,0,0,0.1),
             0px 18px 23px rgba(0,0,0,0.1);
}


.logo{
  background: #4aaaa5;
  color: #ffffff;
  position: relative;
  left: 200px;
  float: left;
  font-size: 19.25px;
}



.nav-bar{
  position: fixed;
  left: 0;
  right: 0;
  z-index: 10;
}



.profile-picture{
  border-radius: 3px;
  height: 380px;
  width: 314px;
  position: absolute;
  bottom: 117px;
  left: 130px;
  box-shadow:  0 4px 1px 0 rgba(0, 0, 0, 0.2), 0 4px 13px 0 rgba(0, 0, 0, 1.19);
 
}


.portfolio-title {
  position: relative;
  left: 120px;
  width: 90%;
}
.contact-title{
  position: relative;
  top: 35px;
}
.gallery-container{
  /* width: 960px; */
  height:500px;
  border-top: 1px solid rgba(231, 217, 217, 0.57);
  background-color: #948e8e0a;
}



.photo{
  height: 250px;
  width: 250Px;
  border: 1px solid #ddd;
  border-radius: 4px;
  padding: 8px;
  transition: .5s ease;
}

.photo:hover {
  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
}


.galery{
  margin-top: 40px;
  width: 90%;
}
.gallery-content{
  /* width: 33%; */
  }



  .gallery-image{
    position: relative;
    display: inline-block;
    padding: 10px;
    left: 117px;
    
}
  

.image-banner{
  position: absolute;
    background:#111315;;
    color: #ffffff;
    width: 233px;
    height: 83px;
    bottom: 0;
    top: 145px;
    right: 19px;
    padding: 20px;
    font-size: 25px;
    text-align: center;
    opacity: 0;
    transition: .5s ease;
  
}


.gallery-image:hover .image-banner{
  opacity: .8;
}


.article{
  width: 56em;
  position: relative;
    left: 18px;
    top: 80px;
}



.list-item{
list-style-type: none;
overflow: hidden;
margin:0 ;
padding: 10px;
}

.link-container{
  padding: 20px;
  display: inline-block;
  
}

.nav-link{
  color: white;
  text-decoration: none;
  left: 117px;
  top: 16px;
  padding-right: 59px;
  position: relative;
  

}
.intro-container{
  height: 450px;
  background-color: blue;
}
.intro-text{
  position: absolute;
  right: 496px;
  bottom: 261px;
  color: white;
  }
.profile-text{
  position: relative;
  top: 32px;
  
}
.profile{
  list-style: none;
  position: relative;
  right: 36px;
}
.main-content, .contact-content{
  /* width: 960px; */
  height: 438px;
  background-color: #ffffff;
  margin: auto;
 

}
.contact-title{
  color:white;
}
.contact-container{
  height: 620px;
  border-top: 1px solid rgb(231, 217, 217);
  /* height: 360px;
    background-color: #ffffff;
    margin: auto; */
}
.container,.container1{
  width: 90%;
  position: absolute;
  left: 109px;
  

}
.container1{
  color: white;
}
.form-content{
  width: 41%;
    position: relative;
    left: 35%;
    top: 53px;
}

.info{
  position: relative;
    bottom: 291px;
}
input[type=text], select, textarea {
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  /* margin-bottom: ; */
  resize: vertical;
}

input#email,input#name{
margin-bottom: 5px;

}
.download-button{
  background-image: linear-gradient(to right, rgba(255,0,0,0.2), rgb(36, 7, 117));
  /* background-color: blue; */
  border: 0;
  padding: 14px;
  margin-top: 26px;
  color: white;
  border-radius: 30px;
  width: 18%;
  box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
             0px 8px 13px rgba(0,0,0,0.1),
             0px 18px 23px rgba(0,0,0,0.1);
}
.button-contact{
  width: 100%;
  background-image: linear-gradient(to right, rgba(255,0,0,0.2), rgb(43, 0, 160));
  /* background-color: blue; */
  border: 0;
  padding: 15px;
  margin-top: 5px;
  color: white;
  border-radius: 30px;
  box-shadow: 0px 4px 3px rgba(0,0,0,0.4),
             0px 8px 13px rgba(0,0,0,0.1),
             0px 18px 23px rgba(0,0,0,0.1);
}

footer{
 /* margin-top: 90px; */
  /* margin-bottom: 0px; */
  color: white;
  position: absolute;
  /* bottom: -19px; */
  top: 1973px;
  width: 100%;
}

footer p{
  margin: 0;
  text-align: center;
}

@media only screen and (max-width: 980px){
  .intro-text {
    right: 64px;
}
.article {
  width: 42em;
}
.main-content {
 height: 519px;
}

.gallery-container {
  /* width: 804px; */
  height: 714px;
}
.form-content {
  width: 53%;
  left: 43%;
  top: 70px;
}
footer{
  top: 2259px;
}

.galery{
  width:80%;
}
}
@media only screen and (max-width: 768px){
  .profile-picture {
    height: 304px;
    width: 288px;
    bottom: 140px;
    left: 31px;
  
}
.intro-text {
  right: 23px;
  bottom: 207px;
}
.article {
  width: 32em;
}

.form-content {
  width: 71%;
  left: 0%;
  top: 264px;
}
.contact-container {
  height: 730px;
}
}
@media only screen and (max-width: 640px){
  .intro-text {
    left: 368px
  }
  .nav-link {
    
    left:0; 
    top: 0; 
    padding-right: 0; 
}

.profile-picture {
  bottom: 191px;
 
}
}

